Отображение ресурсов с картинками типов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">YaDisk</string>
+    <string name="load_error">В ходе загрузки произошла ошибка</string>
+    <string name="path">Путь к файлу: </string>
 </resources>
